js/src/tests/test262/language/expressions/dynamic-import/syntax/invalid/nested-function-no-new-call-expression-prop-access.js







































$DONOTEVALUATE();

function fn() {
  new import('').prop;
}
